deployments/local/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-cloud-platform-deployment
  labels:
    app: hello-cloud-platform
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-cloud-platform # this should match the selector in service.yml
  template:
    metadata:
      labels:
        app: hello-cloud-platform # this should match the selector in service.yml
    spec:
      containers:
        - name: hello-cloud-platform
          image: aafreenansari/hello-world-app:1.0
          ports:
            - containerPort: 8080
