deployments/local/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-cloud-platform-service
spec:
  selector:
    app: hello-cloud-platform # this should match the pod label in deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
